Revision history for MooseX-Extended

{{$NEXT}}

0.24      2022-06-14 19:15:53 CEST

          - Of *course* we found some important typos :)

0.23      2022-06-14 19:01:31 CEST

          - Add a tutorial

0.22      2022-06-12 11:04:07 CEST

          - A field's `init_arg` can now begin with an underscore. (thanks,
            tobyink!)
          - `field` is now only lazy if there's a builder or default.

0.21      2022-06-07 19:17:30 CEST

          - Remove some duplicate POD and make it easier to follow.

0.20      2022-06-07 18:40:47 CEST

          - You can now exclude the "field" and "param" functions
          - Add MooseX::Extended::Role::Custom (create your own Moose::Role)
          - Add MooseX::Extended::Custom (create your own Moose)
          - Add optional async/await support
          - Linux CI now includes v.5.36.0
          - Add optional multimethod support
          - We no longer use @_ inside signatured subs

0.10      2022-05-31 22:26:34 CEST

          - Added .gitignore and cleaned up dist.ini (thanks, haarg!)
          - Skip Perl::Tidy tests unless Test::PerlTidy is installed
          - Add some test dependencies for Perl::Critic to dist.ini
          - Add a few more tests to cover edge cases.
          - Convert some die/croak statements to exceptions
          - Fix typos in POD (thanks, bradclawsie!)

0.07      2022-05-27 18:51:42 CEST

          - Fixed bug where passing a reference to a constructor for a cloned
            attribute wouldn't be cloned at first.
          - B::Hooks::AtRuntime and true.pm are not loaded unless required
          - Add CONTRIBUTING.md
          - Test and document that postfix (package Foo {...}) syntax is not
            required and that we can inline multiple packages in the same
            file.

0.06      2022-05-26 14:32:54 CEST

          - Make it very easy to exclude features and include types.

0.05      2022-05-26 10:24:35 CEST
